<resources>
    <string name="app_name">Spark Lab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tab_write">Write</string>
    <string name="tab_replay">Reply</string>
    <string name="tab_improve">Improve</string>

    <string name="informal">Informal</string>
    <string name="formal">Formal</string>
    <string name="friendly">Friendly</string>
    <string name="assertive">Assertive</string>
    <string name="pessimistic">Pessimistic</string>
    <string name="optimistic">Optimistic</string>
    <string name="tab_color">#8538A3</string>


    <string name="writing_tones">Writing Tones</string>
    <string name="write_a_paragraph">Write a paragraph…</string>
    <string name="_0_2000">0/2,000</string>
    <string name="correct">Correct</string>
    <string name="reply">Reply</string>
    <string name="write">Write</string>
    <string name="replying_tones">Replying Tones</string>
    <string name="login_signup">LogIn/SignUp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="generate_content">Generate Content</string>

    <string name="facebook_app_id">5894516690609304</string>
    <!--
        On the Dashboard, navigate to Settings > Advanced > Security > Client token.
    -->
    <string name="facebook_client_token">cc829f89949ba76d6700939ba22e21cb</string>
</resources>