<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.replay.ReplyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_msg_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_msg_types">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/write_a_paragraph"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/box_color"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:expandedHintEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/box_color"
                app:counterMaxLength="2000"
                app:counterEnabled="true"
                app:counterTextAppearance="@style/TextLimitStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:minHeight="250dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_alphabet_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/_0_2000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_input">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rouned_bg_purple_output_box"
                android:minHeight="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:padding="5dp"
                android:src="@drawable/ic_copy_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sliders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_output">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/replying_tones"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_formal_informal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="50"
                    android:valueFrom="0"
                    android:valueTo="100"
                    app:thumbColor="@color/white"
                    app:thumbElevation="3dp"
                    app:thumbStrokeColor="@color/slider_formal_informal"
                    app:thumbStrokeWidth="4dp"
                    app:thumbRadius="10dp"
                    app:trackColorActive="@color/slider_formal_informal"
                    app:trackColorInactive="@color/grey" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="-15dp"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/informal"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/formal"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_friendly_assertive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="50"
                    android:valueFrom="0"
                    android:valueTo="100"
                    app:thumbColor="@color/white"
                    app:thumbElevation="3dp"
                    app:thumbRadius="10dp"
                    app:thumbStrokeColor="@color/slider_friendly_assertive"
                    app:thumbStrokeWidth="4dp"
                    app:trackColorActive="@color/slider_friendly_assertive"
                    app:trackColorInactive="@color/grey" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="-15dp"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/friendly"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/assertive"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_pessimistic_optimistic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="50"
                    android:valueFrom="0"
                    android:valueTo="100"
                    app:thumbColor="@color/white"
                    app:thumbElevation="3dp"
                    app:thumbRadius="10dp"
                    app:thumbStrokeColor="@color/slider_pessimistic_optimistic"
                    app:thumbStrokeWidth="4dp"
                    app:trackColorActive="@color/slider_pessimistic_optimistic"
                    app:trackColorInactive="@color/grey" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="-15dp"
                    android:weightSum="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/pessimistic"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/optimistic"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/reply"
            android:elevation="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rouned_bg_purple_button"
            app:layout_constraintTop_toBottomOf="@+id/sliders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>